# modern-polars

./: pyproject.toml
book/: index.qmd  indexing.qmd  method_chaining.qmd  performance.qmd  scaling.qmd  summary.qmd  tidy.qmd  timeseries.qmd
